Fixed fetching subscriptions not working on mobile and tablet version

--- a/styles/main_page_styles.css
+++ b/styles/main_page_styles.css
@@ -87,7 +87,7 @@
 }
 
 .hide {
-  visibility: hidden;
+  z-index: -1 !important;
 }
 
 .nodim {
